# ollama-telegram-ai

./: LICENSE  README.md  keyboards.py  main.py  model_api.py  models.py  pyproject.toml  settings.py
bot/: __init__.py  bot.py  settings.py
bot/keyboards/: inline.py  reply.py
bot/ollama/: __init__.py  api.py  dto.py
bot/routers/: completion.py  start.py
bot/translator/: __init__.py
